# sigma

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
assignments/: index.html
docs/: assignments.md  index.md  lab-setup.md
etc/systemd/system/: live-notes.service  sigma.service
etc/tljh/state/rules/: dashboard.toml  live-notes.toml
lab-setup/: index.html
search/: search_index.json
src/sigma/: app.py  assignments.py  cli.py  config.py  jupyterhub.py  magic.py  preview.py  problems.py  settings.py
src/sigma/dashboard/: app.py
src/sigma/static/: nbpreview
src/sigma/static/css/: preview.css  style.css
src/sigma/templates/: base.html  index.html  settings.html  users.html
src/sigma/templates/preview/: base.html  collection.html  index.html
tests/: __init__.py  test_assignments.py  test_jupyterhub.py  test_preview.py
training-data/: .gitignore  README.md
training-data/assignments/: assignment-01.yml
training-data/home/jupyter-alpha/: assignment-01.ipynb
